fix: out of layout on safari

--- a/src/app/modules/member-board/member-horoscope/member-horoscope.component.scss
+++ b/src/app/modules/member-board/member-horoscope/member-horoscope.component.scss
@@ -125,12 +125,13 @@ tr:not(.margin-line) {
   &::after {
     position: absolute;
     top: 0;
+    bottom: 0;
     left: 0;
     display: flex;
+    flex: 1;
     align-items: center;
     justify-content: center;
     width: 100%;
-    height: 100%;
     color: var(--anti-color);
     font-size: 36px;
     opacity: 0.5;
