--- a/src/app/modules/member-board/member-table/member-table.component.scss
+++ b/src/app/modules/member-board/member-table/member-table.component.scss
@@ -65,7 +65,7 @@ mat-table {
   }
 
   .mat-column-btnGroup {
-    flex: 0 0 20%;
+    flex: 0 0 25%;
     justify-content: flex-end;
   }
 }
